deal with a handful of Java 9 changes and deprecations