@@ -712,7 +712,8 @@ public class Base {
   protected void initInternalTool(String className) {
     try {
       Class<?> toolClass = Class.forName(className);
-      final Tool tool = (Tool) toolClass.newInstance();
+      final Tool tool = (Tool)
+        toolClass.getDeclaredConstructor().newInstance();
 
       tool.init(this);
       internalTools.add(tool);
