@@ -2479,7 +2479,7 @@ public abstract class Editor extends JFrame implements RunnerListener {
       // on macosx, setting the destructive property places this option
       // away from the others at the lefthand side
       pane.putClientProperty("Quaqua.OptionPane.destructiveOption",
-                             new Integer(2));
+                             Integer.valueOf(2));
 
       JDialog dialog = pane.createDialog(this, null);
       dialog.setVisible(true);
